<resources>

    <!-- - - - - - - - - - - - - - - - - -
      - Used throughout Money Analytics  -
      - - - - - - - - - - - - - - - - - -->

    <!-- Application name -->
    <string name="app_name">Money Analytics</string>


    <!-- - - - - - - - - - - - - - -
      - Used in Application Drawer -
      - - - - - - - - - - - - - - -->

    <!-- Application drawer action strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Analytics section -->
    <string name="nav_drawer_analytics_title">Analytics</string>
    <!-- Income, Expenses and Savings string resources are also
    used to display the correct fragment in Detail Activity -->
    <string name="nav_drawer_income_string">Income</string>
    <string name="nav_drawer_expenses_string">Expenses</string>
    <string name="nav_drawer_savings_string">Savings</string>

    <!-- Tracking period section -->
    <string name="nav_drawer_period_title">Tracking period</string>
    <string name="nav_drawer_today_string">Today</string>
    <string name="nav_drawer_week_string">This week</string>
    <string name="nav_drawer_month_string">This month</string>
    <string name="nav_drawer_date_string">Pick a date</string>

    <!-- About section -->
    <string name="nav_drawer_about_string">About</string>


    <!-- - - - - - - - - - - - -
      - Used in About Activity -
      - - - - - - - - - - - - -->

    <string name="about_activity_description_tv">
        This app was made as a final project of the Android Developer Nanodegree by Udacity and Google.
    </string>


    <!-- - - - - - - - - - - - -
      - Used in Main Activity  -
      - - - - - - - - - - - - -->

    <!-- Balance text in main activity -->
    <string name="main_activity_balance_text">Balance</string>

    <!-- Main activity button text and content description -->
    <string name="main_activity_income_button_text">Add Income</string>
    <string name="main_activity_expense_button_text">Add Expense</string>


    <!-- - - - - - - - - - - - - - - - - -
      - Used in Spinner period selector  -
      - - - - - - - - - - - - - - - - - -->

    <!-- Default text in spinner -->
    <string name="spinner_period_prompt">Pick a period</string>

    <!-- Spinner options array -->
    <string-array name="spinner_period_array">
        <item>@string/nav_drawer_today_string</item>
        <item>@string/nav_drawer_week_string</item>
        <item>@string/nav_drawer_month_string</item>
    </string-array>


    <!-- - - - - - - - - - - - - - - - - - - - - -
      - Used in Spinner income category selector -
      - - - - - - - - - - - - - - - - - - - - - -->

    <!-- Default text in spinner -->
    <string name="spinner_income_category_prompt">Category</string>

    <!-- Array strings -->
    <string name="salaryString">Salaries</string>
    <string name="depositString">Deposits</string>
    <string name="royaltiesString">Royalties</string>
    <string name="winningsString">Winnings</string>

    <!-- Spinner options array -->
    <string-array name="spinner_income_category_array">
        <item>@string/salaryString</item>
        <item>@string/depositString</item>
        <item>@string/royaltiesString</item>
        <item>@string/winningsString</item>
    </string-array>


    <!-- - - - - - - - - - - - - - - - - - - - - - -
      - Used in Spinner expense category selector  -
      - - - - - - - - - - - - - - - - - - - - - - -->

    <!-- Default text in spinner -->
    <string name="spinner_expense_category_prompt">Category</string>

    <!-- Array strings -->
    <string name="carString">Car</string>
    <string name="clothesString">Clothes</string>
    <string name="cosmeticsString">Cosmetics</string>
    <string name="foodString">Food</string>
    <string name="giftsString">Gifts</string>
    <string name="healthString">Health</string>
    <string name="homeString">Home</string>
    <string name="petsString">Pets</string>
    <string name="servicesString">Services</string>
    <string name="sportsString">Sports</string>

    <!-- Spinner options array -->
    <string-array name="spinner_expense_category_array">
        <item>@string/carString</item>
        <item>@string/clothesString</item>
        <item>@string/cosmeticsString</item>
        <item>@string/foodString</item>
        <item>@string/giftsString</item>
        <item>@string/healthString</item>
        <item>@string/homeString</item>
        <item>@string/petsString</item>
        <item>@string/servicesString</item>
        <item>@string/sportsString</item>
    </string-array>


    <!-- - - - - - - - - - - - - -
      - Used in Income Fragment  -
      - - - - - - - - - - - - - -->

    <!-- Total text in income fragment -->
    <string name="income_fragment_total_tv">Total</string>


    <!-- - - - - - - - - - - - - -
      - Used in Expense Fragment -
      - - - - - - - - - - - - - -->

    <!-- Total text in Expense fragment -->
    <string name="expense_fragment_total_text">Total</string>


    <!-- - - - - - - - - - - - - -
      - Used in Savings Fragment -
      - - - - - - - - - - - - - -->

    <!-- Goal text in Savings fragment -->
    <string name="savings_fragment_goal_text">Goal</string>

    <!-- Due date text in Savings fragment -->
    <string name="savings_fragment_due_text">Due date</string>

    <!-- Daily average text in Savings fragment -->
    <string name="savings_fragment_average_text">Daily average</string>

    <!-- Biggest save text in Savings fragment -->
    <string name="savings_fragment_saved_so_far_text">Saved so far</string>

    <!-- Set goal button text in Savings fragment -->
    <string name="savings_fragment_set_goal_text">Set goal</string>

    <!-- Edit goal button text in Savings fragment -->
    <string name="savings_fragment_edit_goal_text">Edit goal</string>

    <!-- Edit goal button text in Savings fragment -->
    <string name="savings_fragment_add_saving_goal_text">Set a goal!</string>

    <!-- Savings label text in Savings fragment -->
    <string name="savings_fragment_savings_label">Savings</string>

    <!-- Expenses label text in Savings fragment -->
    <string name="savings_fragment_expenses_label">Expenses</string>

    <!-- Savings label text in Savings fragment -->
    <string name="savings_fragment_days_remaining_text">days</string>

    <!-- Savings label text in Savings fragment -->
    <string name="savings_fragment_day_remaining_text">day</string>

    <!-- Expenses label text in Savings fragment -->
    <string name="savings_fragment_per_day_text">/day</string>


    <!-- - - - - - - - - - - - - - - -
      - Used in Add Income Activity  -
      - - - - - - - - - - - - - - - -->

    <!-- Activity Title text in add income activity -->
    <string name="add_income_activity_title">Add income</string>

    <!-- Amount placeholder text in add income activity -->
    <string name="add_income_activity_amount_placeholder">0.00</string>

    <!-- Description placeholder text in add income activity -->
    <string name="add_income_activity_description_placeholder">Description</string>

    <!-- Category placeholder text in add income activity -->
    <string name="add_income_activity_category_placeholder">Category</string>

    <!-- Monthly income text in add income activity -->
    <string name="add_income_activity_monthly_income_text">Monthly income</string>

    <!-- Today text in add income activity -->
    <string name="add_income_activity_today_text">Today</string>

    <!-- Other date text in add income activity -->
    <string name="add_income_activity_other_date_text">Other date</string>

    <!-- Other date placeholder text in add income activity -->
    <string name="add_income_activity_other_date_placeholder">dd-mm-yyyy</string>

    <!-- Cancel button text in add income activity -->
    <string name="add_income_activity_cancel_text">Cancel</string>

    <!-- Ok button text in add income activity -->
    <string name="add_income_activity_ok_text">OK</string>

    <!-- Activity added text in add income activity -->
    <string name="add_income_activity_added_text">Income added!</string>

    <!-- Warning text which appears when the form is not complete in add income activity -->
    <string name="add_income_activity_value_warning_text">Please add a value to continue!</string>
    <string name="add_income_activity_description_warning_text">Please add a description to continue!</string>


    <!-- - - - - - - - - - - - - - - -
      - Used in Add Expense Activity  -
      - - - - - - - - - - - - - - - -->

    <!-- Activity Title text in add expense activity -->
    <string name="add_expense_activity_title">Add expense</string>

    <!-- Amount placeholder text in add income activity -->
    <string name="add_expense_activity_amount_placeholder">0.00</string>

    <!-- Description placeholder text in add income activity -->
    <string name="add_expense_activity_description_placeholder">Description</string>

    <!-- Category placeholder text in add income activity -->
    <string name="add_expense_activity_category_placeholder">Category</string>

    <!-- Monthly income text in add income activity -->
    <string name="add_expense_activity_monthly_expense_text">Monthly expense</string>

    <!-- Today text in add income activity -->
    <string name="add_expense_activity_today_text">Today</string>

    <!-- Other date text in add income activity -->
    <string name="add_expense_activity_other_date_text">Other date</string>

    <!-- Other date placeholder text in add income activity -->
    <string name="add_expense_activity_other_date_placeholder">dd-mm-yyyy</string>

    <!-- Cancel button text in add income activity -->
    <string name="add_expense_activity_cancel_text">Cancel</string>

    <!-- Ok button text in add income activity -->
    <string name="add_expense_activity_ok_text">OK</string>

    <!-- Activity added text in add expense activity -->
    <string name="add_expense_activity_added_text">Expense added!</string>


    <!-- - - - - - - - - - - - - - - -
      - Used in Add Savings Activity -
      - - - - - - - - - - - - - - - -->

    <!-- Activity Title text in add savings activity -->
    <string name="add_savings_activity_title">Add savings goal</string>

    <!-- Activity Title text in edit savings activity -->
    <string name="edit_savings_activity_title">Edit savings goal</string>

    <!-- Amount placeholder text in add savings activity -->
    <string name="add_savings_activity_amount_placeholder">0.00</string>

    <!-- Cancel button text in add savings activity -->
    <string name="add_savings_activity_cancel_text">Cancel</string>

    <!-- Ok button text in add savings activity -->
    <string name="add_savings_activity_ok_text">OK</string>

</resources>
