<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/main_period_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.razerdp.widget.animatedpieview.AnimatedPieView
        android:id="@+id/main_activity_pie_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/add_income_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_period_tv"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/main_activity_balance_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_balance_text"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/main_activity_pie_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_activity_balance_value_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_balance_tv" />

    <Button
        android:id="@+id/add_income_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:contentDescription="@string/main_activity_income_button_text"
        android:text="@string/main_activity_income_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_expense_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_expense_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:contentDescription="@string/main_activity_expense_button_text"
        android:text="@string/main_activity_expense_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_income_button" />

</android.support.constraint.ConstraintLayout>